--- a/src/pages/Scanner.css
+++ b/src/pages/Scanner.css
@@ -12,3 +12,18 @@
   top:0;
   right:0;
 }
+
+.barcode-polygon {
+  fill:rgba(85,240,40,0.5);
+  stroke:green;
+  stroke-width:1;
+}
+
+.overlay {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+}
