--- a/src/pages/Scanner.css
+++ b/src/pages/Scanner.css
@@ -1,3 +1,8 @@
+.scanner {
+  z-index: 999;
+  padding-top: var("--ion-statusbar-padding");
+}
+
 .controls {
   position: absolute;
   z-index: 999;
