correctly set safe area for iOS

--- a/src/pages/Scanner.css
+++ b/src/pages/Scanner.css
@@ -1,28 +1,23 @@
-.scanner {
-  z-index: 999;
-  padding-top: env(statusbar-padding);
-}
-
 .controls {
   position: absolute;
   z-index: 999;
 }
 
 .camera-select {
-  top:0;
+  top:env(safe-area-inset-top);
   left:0;
   height: 20px;
 }
 
 .resolution-select {
-  top:20px;
+  top:calc(env(safe-area-inset-top) + 20px);
   left:0;
   height: 20px;
 }
 
 
 .close-button {
-  top:0;
+  top:env(safe-area-inset-top);
   right:0;
   height: 20px;
   border: revert;
