--- a/src/pages/Scanner.css
+++ b/src/pages/Scanner.css
@@ -5,10 +5,17 @@
 }
 
 .overlay {
-   top: 0;
-   left: 0;
-   position: absolute;
-   width: 100%;
-   height: 100%;
-   z-index: 998;
- }
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 998;
+}
+
+/*
+ion-content {
+  background: transparent;
+  --background: transparent;
+  --ion-background-color: transparent
+}*/
